--- a/index.html
+++ b/index.html
@@ -1,30 +1,147 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>head元素对用户不可见，title显示在浏览器标签页上</title>
-	<link href="styles/style.css" rel="stylesheet">
-	<link href="https://fonts.font.im/css?family=Open+Sans" rel="stylesheet" type="text/css">
-  </head>
-  <body>
-	<h1>国庆节快乐！</h1>
-	<h2>Hello World</h2>
-    <img src="images/button_moments_hover.png" alt="我的测试页面">
-	<p>apple</p>
-	
-	<ol>
-		<li>娜可露露</li>
-		<li>橘右京</li>
-		<li>宫本武藏</li>
-	</ol>
-	
-	<ul>
-		<li>娜可露露</li>
-		<li>橘右京</li>
-		<li>宫本武藏</li>
-	</ul>
-	
-	<a href="http://www.baidu.com">百度首页，href意思是超文本引用</a>
-	<script src="scripts/main.js" defer></script>
-  </body>
-</html> 
+
+<head>
+  <meta charset="utf-8">
+  <title>大大泡泡糖</title>
+  <link rel="shortcut icon" href="images/strawberry.ico" type="image/x-icon">
+  <link href="styles/style.css" rel="stylesheet">
+  <link href="styles/swiper-bundle.min.css" rel="stylesheet">
+  <link href="https://fonts.font.im/css?family=Open+Sans" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+
+  <header>
+  </header>
+
+  <nav>
+    <!-- 本站统一的导航栏 -->
+    <div class="mod_header">
+      <div class="section_inner">
+        <!-- logo部分 -->
+        <div class="logo">
+          <img src="images/button_moments_hover.png" alt="朋友圈">
+        </div>
+        <div class="navi">
+          <ul>
+            <li class="navi_item"><a href="#" class="navi_link navi_link--current">大大泡泡糖</a></li>
+            <li class="navi_item"><a href="htmls/cpp.html" class="navi_link">C++</a></li>
+            <li class="navi_item"><a href="htmls/go.html" class="navi_link">Go</a></li>
+            <li class="navi_item"><a href="htmls/network.html" class="navi_link">网络</a></li>
+            <li class="navi_item"><a href="htmls/data_struct.html" class="navi_link">数据结构</a></li>
+          </ul>
+        </div>
+        <ul class="sub_navi">
+          <li class="sub_navi_item"><a href="#" class="sub_navi_link sub_navi_link--current">首页</a></li>
+          <li class="sub_navi_item"><a href="often.html" class="sub_navi_link">常用代码</a></li>
+        </ul>
+        <div class="select">
+          <a href="#" class="select_choose">设置</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <!-- 照片推荐 -->
+  <div class="photo-wall">
+    <div class="photo-title">
+        <div class="title">照片墙</div>
+    </div>
+    <div class="photo-list">
+        <ul>
+            <li><a href="#">春天</a></li>
+            <li><a href="#">夏天</a></li>
+            <li><a href="#">秋天</a></li>
+            <li><a href="#">冬天</a></li>
+        </ul>
+    </div>
+
+    <!-- 轮播图容器div -->
+    <div class="swiper-container">
+        <!-- 可视窗口的div -->
+        <div class="swiper-wrapper">
+            <!-- 图片容器div -->
+            <div class="swiper-slide">
+                <!-- 这里不能用好多个div或者直接用img 因为有图片和文字两个类型的东西 所以需要用列表将其存放起来 -->
+                <ul>
+                    <li>
+                        <img src="images/1.jpg" style="width:224px">
+                        <p style="width:224px">仰望星空</p>
+                        <a>播放量：1789.7万</a>
+                    </li>
+
+                    <li><img src="images/2.jpg" style="width:224px">
+                        <p style="width:224px">你就知道我来自哪里</p>
+                        <a>播放量：1789.7万</a>
+                    </li>
+
+                    <li><img src="images/3.jpg" style="width:224px">
+                        <p style="width:224px">所有的星星眼</p>
+                        <a>播放量：1.2万</a>
+                    </li>
+
+                    <li><img src="images/4.jpg" style="width:224px">
+                        <p style="width:224px">都在等一颗星</p>
+                        <a>播放量：30.0万</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="swiper-slide">
+                <ul>
+                    <li> <img src="images/5.jpg" style="width:224px">
+                        <p style="width:224px">剑指的方向</p>
+                        <a>播放量：1480.0万</a>
+                    </li>
+                    <li><img src="images/6.jpg" style="width:224px">
+                        <p style="width:224px">就是天才的故乡</p>
+                        <a>播放量：30.7万</a>
+                    </li>
+                    <li><img src="images/7.jpg" style="width:224px">
+                        <p style="width:224px">星光荡开宇宙</p>
+                        <a>播放量：804.8万</a>
+                    </li>
+                    <li><img src="images/8.jpg" style="width:224px">
+                        <p style="width:224px">本人闪耀其中</p>
+                        <a>播放量：284.8万</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- 分页器 相对于歌单推荐这个大div进行定位 -->
+    <div class="swiper-pagination"></div>
+    <!-- 导航按钮  相对于歌单推荐这个大div进行定位 -->
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+  </div>
+
+  <!--我是注释-->
+  <script src="scripts/main.js"></script>
+  <script src="scripts/swiper-bundle.min.js"></script>
+
+  <!-- Initialize Swiper -->
+  <script>
+    var swiper = new Swiper('.swiper-container', {
+      loop: true,
+      loopFillGroupWithBlank: true,
+      speed:2000,
+      autoplay : true,
+
+      //分页器
+      pagination: {
+        el: '.swiper-pagination',
+        clickable: true,
+      },
+
+      //前进后退
+      navigation: {
+        nextEl: '.swiper-button-next',
+        prevEl: '.swiper-button-prev',
+      },
+    });
+  </script>
+</body>
+
+</html>
