--- a/htmls/C++11.html
+++ b/htmls/C++11.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html><head><title>C++11</title><meta charset='utf-8'><link href='../styles/marxico.css'  rel='stylesheet'>
+<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
 <style>
 .note-content  {font-family: "Helvetica Neue", Arial, "Hiragino Sans GB", STHeiti, "Microsoft YaHei", "WenQuanYi Micro Hei", SimSun, Song, sans-serif;}
 
