--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="section_inner">
         <!-- logo部分 -->
         <div class="logo">
-          <img src="images/button_moments_hover.png" alt="朋友圈">
+          <img src="images/logo.png" alt="logo" width="70" height="70">
         </div>
         <div class="navi">
           <ul>
@@ -50,10 +50,10 @@
     </div>
     <div class="photo-list">
         <ul>
-            <li><a href="#">春天</a></li>
-            <li><a href="#">夏天</a></li>
-            <li><a href="#">秋天</a></li>
-            <li><a href="#">冬天</a></li>
+            <li><a href="#" class="photo_list_link photo_list_link--current">春天</a></li>
+            <li><a href="#" class="photo_list_link">夏天</a></li>
+            <li><a href="#" class="photo_list_link">秋天</a></li>
+            <li><a href="#" class="photo_list_link">冬天</a></li>
         </ul>
     </div>
 
