--- a/htmls/cpp.html
+++ b/htmls/cpp.html
@@ -17,7 +17,7 @@
             <div class="section_inner">
                 <!-- logo部分 -->
                 <div class="logo">
-                    <img src="../images/button_moments_hover.png" alt="朋友圈">
+                    <img src="../images/logo.png" alt="logo" width="70" height="70">
                 </div>
                 <div class="navi">
                     <ul>
@@ -38,7 +38,7 @@
     <div class="title-1">
         <div class="note-list">
             <ul>
-                <li class="note-1"><a href="../htmls/C++11.html" class="note-link-1" target="_blank">C++11</a></li>
+                <li class="note-1"><a href="../htmls/C++11.html" class="note-link-1">C++11</a></li>
                 <li class="note-1"><a href="#" class="note-link-1">继承与多态</a></li>
                 <li class="note-1"><a href="htmls/go.html" class="note-link-1">多线程</a></li>
                 <li class="note-1"><a href="htmls/network.html" class="note-link-1">醉了</a></li>
