--- a/htmls/cpp.html
+++ b/htmls/cpp.html
@@ -49,6 +49,7 @@
                 <li class="note-1"><a href="../htmls/C++11.html" class="note-link-1">C++11</a></li>
                 <li class="note-1"><a href="#" class="note-link-1">STL</a></li>
                 <li class="note-1"><a href="htmls/go.html" class="note-link-1">多线程</a></li>
+                <li class="note-1"><a href="../htmls/Git.html" class="note-link-1">Git</a></li>
             </ul>
         </div>
     </div>
