--- a/htmls/Git.html
+++ b/htmls/Git.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><title>Git</title><meta charset='utf-8'><link href='https://cdn.maxiang.io/res-min/themes/marxico.css' rel='stylesheet'><style></style></head><body><div id='preview-contents' class='note-content'>
+<!DOCTYPE html><html><head><title>Git</title><meta charset='utf-8'><link href='../styles/marxico.css' rel='stylesheet'><style></style></head><body><div id='preview-contents' class='note-content'>
                         
                     
 
