--- a/htmls/Git.html
+++ b/htmls/Git.html
@@ -1,4 +1,8 @@
-<!DOCTYPE html><html><head><title>Git</title><meta charset='utf-8'><link href='../styles/git-marxico.css' rel='stylesheet'><style></style></head><body><div id='preview-contents' class='note-content'>
+<!DOCTYPE html><html><head><title>Git</title><meta charset='utf-8'><link href='../styles/git-marxico.css' rel='stylesheet'>
+<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
+<style>
+
+</style></head><body><div id='preview-contents' class='note-content'>
                         
                     
 
